<resources>
    <string name="app_name">ValorantPruebaApi</string>
    <string name="welcome_to_valori">WELCOME TO VALORI</string>
    <string name="password">PASSWORD</string>
    <string name="user">USER</string>
    <string name="sign_in">sign in</string>
    <string name="sign_in_with">sign in with</string>
    <string name="continue_without_login">continue without login</string>
    <string name="need_to_sign_up">¿need to sign up?</string>
    <string name="logo_del_valorant">Logo del valorant</string>
    <string name="insert_your_data">INSERT YOUR DATA</string>
    <string name="password_register">PASSWORD</string>
    <string name="mail_register">MAIL</string>
    <string name="sign_up_register">sign up</string>
    <string name="sign_up_with_register">sign up with</string>
    <string name="logo_del_valorant_register">Logo del valorant</string>
    <string name="logo_del_valorant_mainscreen">Logo del valorant</string>
    <string name="what_are_you_looking_for_mainscreen">¿WHAT ARE YOU LOOKING FOR?</string>
    <string name="agents_mainscreen">AGENTS</string>
    <string name="maps_mainscreen">MAPS</string>
    <string name="weapons_mainscreen">WEAPONS</string>
    <string name="lineups_mainscreen">LINEUPS</string>
    <string name="agentes_mainactivity">Agentes</string>
    <string name="damage">DAMAGE</string>
    <string name="weapon_name">WEAPON NAME</string>
    <string name="category">CATEGORY</string>
    <string name="cost">Cost:</string>
    <string name="penetration">Penetration:</string>
    <string name="head">Head</string>
    <string name="body">Body</string>
    <string name="legs">Legs</string>
    <string name="close">Close</string>
    <string name="textviewmap">TextViewMap</string>
    <string name="mapname">MapName</string>
    <string name="map_icon_preview">Map icon preview</string>
    <string name="map_view_disposition">Map view Disposition</string>
    <string name="mapimagelineup">mapImageLineup</string>
    <string name="choose_your_agent">Choose your agent:</string>
    <string name="choose_your_map">Choose your map:</string>
    <string name="lineup">LINEUP</string>
    <string name="opendrawer">Open</string>
    <string name="closedrawer">Close</string>
    <string name="agents_nav">Agents</string>
    <string name="maps_nav">Maps</string>
    <string name="weapons_nav">Weapons</string>
    <string name="lineups_nav">Lineups</string>
    <string name="logonavheader">logonavheader</string>
    <string name="mapview_from_maplist_recyclerview">MapView from MapList RecyclerView</string>
    <string name="agentimage">agentImage</string>
    <string name="agentportrait2">agentPortrait2</string>
    <string name="register">REGISTER</string>
    <string name="rangos">0-15m 15-30m 30-50m</string>
    <string name="valorant_lineups_tool">Valorant Lineups Tool</string>
</resources>