<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_valorant_login"
    tools:context=".MainScreen">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/valorant_font"
            android:rotationX="25"
            android:text="VALORI"
            android:textColor="#2D000000"
            android:textSize="100sp"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="495dp"
            android:layout_marginLeft="160dp"
            android:contentDescription="@string/logo_del_valorant_mainscreen"
            app:srcCompat="@drawable/valorant_logo" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="280dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck">

        <TextView
            android:id="@+id/tvMainScreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/what_are_you_looking_for_mainscreen"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonAgents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/agents_mainscreen"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonMaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/maps_mainscreen"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonWeapons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/weapons_mainscreen"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonLineups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/baseline_star_24"
            android:text="@string/lineups_mainscreen"
            android:textColor="@color/black" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>