<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lineups.ActivityLineups"
    android:background="@drawable/fondo_valorant_login">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/box">

        <TextView
            android:id="@+id/textView3"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/choose_your_agent"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewAgentsLineups"
            android:layout_width="370dp"
            android:layout_height="130dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:background="@drawable/box_recycler"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/choose_your_map"
            android:textSize="18sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMapsLineups"
            android:padding="10dp"
            android:layout_width="370dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/box_recycler"/>

        <FrameLayout
            android:layout_width="370dp"
            android:layout_height="360dp"
            android:layout_gravity="center"
            android:background="@drawable/box_recycler">

            <WebView
                android:id="@+id/webViewLineups"
                android:layout_width="340dp"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/textViewLineups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10dp"
                android:text="@string/lineup"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>